--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
     <body>
         <div id="shopping-list">
             <h1>{{ header.toLocaleUpperCase() }}</h1>
+            <ul>
+                <li v-for="item in items">{{ item }}</li>
+            </ul>
         </div>
-
         <script src="https://unpkg.com/vue"></script>
         <script>
             var shoppingList = new Vue({
                 el: '#shopping-list',
                 data: {
                     header: 'shopping list app',
+                    items: [
+                        '10 party hats',
+                        '2 board games',
+                        '20 cups',
+                    ]
                 }
             })
         </script>
