user inputs & vue devtools

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <div id="shopping-list">
             <h1>{{ header.toLocaleUpperCase() }}</h1>
+            <input v-model="newItem" type="text" placeholder="Add an item">
             <ul>
                 <li v-for="item in items">{{ item }}</li>
             </ul>
@@ -18,6 +19,7 @@
                 el: '#shopping-list',
                 data: {
                     header: 'shopping list app',
+                    newItem: '',
                     items: [
                         '10 party hats',
                         '2 board games',
