--- a/index.html
+++ b/index.html
@@ -7,20 +7,26 @@
     </head>
     <body>
         <div id="shopping-list">
-            <h1>{{ header.toLocaleUpperCase() }}</h1>
-            <div class="add-item-form">
+            <div class="header">
+                <h1>{{ header.toLocaleUpperCase() }}</h1>
+                <button v-if="state === 'default'" class="btn btn-primary" @click="changeState('edit')">Add Item</button>
+                <button v-else class="btn btn-cancel" @click="changeState('default')">Cancel Adding Item</button>
+            </div>
+            <div v-if="state === 'edit'" class="add-item-form">
                 <input v-model="newItem" type="text" placeholder="Add an item" @keyup.enter="saveItem">
                 <button class="btn btn-primary" @click="saveItem">Save Item</button>
             </div>
             <ul>
                 <li v-for="item in items">{{ item }}</li>
             </ul>
+            <p v-if="items.length === 0">Nice job! You've bought all your items.</p>
         </div>
         <script src="https://unpkg.com/vue"></script>
         <script>
             var shoppingList = new Vue({
                 el: '#shopping-list',
                 data: {
+                    state: 'default',
                     header: 'shopping list app',
                     newItem: '',
                     items: [
@@ -32,6 +38,10 @@
                 methods: {
                     saveItem: function() {
                         this.items.push(this.newItem);
+                        this.newItem = '';
+                    },
+                    changeState: function (newState) {
+                        this.state = newState;
                         this.newItem = '';
                     }
                 }
