--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <button class="btn btn-primary" :disabled="newItem.length === 0" @click="saveItem">Save Item</button>
             </div>
             <ul>
-                <li v-for="item in items" :class="{strikeout: item.purchased}" @click="togglePurchased(item)">{{ item.label }}</li>
+                <li v-for="item in reversedItems" :class="{strikeout: item.purchased}" @click="togglePurchased(item)">{{ item.label }}</li>
             </ul>
             <p v-if="items.length === 0">Nice job! You've bought all your items.</p>
         </div>
@@ -46,6 +46,11 @@
                             highPriority: false,
                         },
                     ]
+                },
+                computed: {
+                    reversedItems() {
+                        return this.items.slice(0).reverse();
+                    }
                 },
                 methods: {
                     saveItem: function() {
